# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import billsRouter from "./bills";
 import statsRouter from "./stats";
 import accountRouter from "./account";
+import paymentsRouter from "./payments";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(billsRouter);
 router.use(statsRouter);
 router.use(accountRouter);
+router.use(paymentsRouter);
 
 export default router;
